# TTI-FastAPI

./: .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup.cfg  start.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: flake8.yml
envs/: fastapi.env.sample  rabbitmq.env.sample
latentdiffusion/: app.py
latentdiffusion/configs/: txt2img-1p4B-eval.yaml
latentdiffusion/ldm/: util.py
latentdiffusion/ldm/data/: base.py  lsun.py
latentdiffusion/ldm/models/diffusion/: classifier.py  ddim.py  plms.py
latentdiffusion/ldm/modules/: attention.py  ema.py  x_transformer.py
latentdiffusion/ldm/modules/diffusionmodules/: openaimodel.py  util.py
latentdiffusion/ldm/modules/encoders/: modules.py
latentdiffusion/ldm/modules/image_degradation/: bsrgan.py  bsrgan_light.py
latentdiffusion/ldm/modules/losses/: contperceptual.py  vqperceptual.py
scripts/: init_rabbitmq.sh  start.sh
src/: app.py  config.py  enums.py  event_handlers.py  schemas.py
src/router/: prediction.py
tti_fastapi/: config.py  constants.py  enums.py  event_handlers.py  schemas.py
tti_fastapi/ldm/: lr_scheduler.py  util.py
tti_fastapi/ldm/models/: autoencoder.py
tti_fastapi/ldm/models/diffusion/: classifier.py  ddim.py  ddpm.py  plms.py
tti_fastapi/ldm/modules/: attention.py  ema.py  x_transformer.py
tti_fastapi/ldm/modules/diffusionmodules/: model.py  openaimodel.py  util.py
tti_fastapi/ldm/modules/distributions/: distributions.py
tti_fastapi/ldm/modules/encoders/: modules.py
tti_fastapi/ldm/modules/image_degradation/: bsrgan.py  bsrgan_light.py  utils_image.py
tti_fastapi/ldm/modules/losses/: contperceptual.py  vqperceptual.py
tti_fastapi/router/: prediction.py
tti_fastapi/taming/: lr_scheduler.py  util.py
tti_fastapi/taming/data/: ade20k.py  annotated_objects_coco.py  annotated_objects_dataset.py  annotated_objects_open_images.py  base.py  coco.py  custom.py  faceshq.py  helper_types.py  image_transforms.py  imagenet.py  open_images_helper.py  sflckr.py  utils.py
tti_fastapi/taming/data/conditional_builder/: objects_bbox.py  utils.py  (+1 more)
tti_fastapi/taming/models/: cond_transformer.py  dummy_cond_stage.py  vqgan.py
tti_fastapi/taming/modules/: util.py
(+9 files in other folders)
