[tool.black]
line-length = 119
target-version = ['py39']

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
known_first_party = [
    "config",
    "enums",
    "event_handlers",
    "ldm",
    "taming",
    "router"
]

line_length = 119
lines_after_imports = 2
multi_line_output = 3
use_parentheses = true


[tool.poetry]
name = "TTI-FastAPI"
version = "0.4.1"
description = ""
authors = ["Jibaek Lim <jibaek@comcom.ai>", "YoungJae Kim <byeongal@comcom.ai>", "DongHoon Baek <baek@comcom.ai>", "Heewon Shin <heewon@comcom.ai>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
celery = "^5.2.7"
fastapi = "^0.79.0"
loguru = "^0.6.0"
uvicorn = "^0.18.2"
gunicorn = "^20.1.0"
firebase-admin = "^5.3.0"

[tool.poetry.dev-dependencies]
black = "^23.1.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
pre-commit = "^3.0.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"